--- a/app/src/main/res/layout/developer_layout.xml
+++ b/app/src/main/res/layout/developer_layout.xml
@@ -16,9 +16,11 @@
             android:layout_height="150dp"
             android:contentDescription="@string/icon_info"
             android:hapticFeedbackEnabled="true"
-            tools:src="@drawable/ic_neptune"
             app:civ_border_overlay="true"
-            app:civ_circle_background_color="@color/transparent" />
+            app:civ_border_color="?android:textColorPrimary"
+            app:civ_border_width="1dp"
+            app:civ_circle_background_color="@color/colorAccent"
+            tools:src="@drawable/ic_neptune" />
 
         <TextView
             android:id="@+id/developerName"
