--- a/base/src/main/res/layout/motiv_toolbar.xml
+++ b/base/src/main/res/layout/motiv_toolbar.xml
@@ -32,6 +32,7 @@
                 android:maxLength="50"
                 android:maxLines="1"
                 android:text="@string/app_name"
+                android:fontFamily="@font/jost"
                 android:textAppearance="@style/ToolbarTitle"
                 android:textColor="@color/white" />
         </RelativeLayout>
