--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- my colors -->
     <color name="colorPrimary">#673AB7</color>
-    <color name="colorPrimaryDark">#512DA8</color>
+    <color name="colorPrimaryDark">#6200EA</color>
     <color name="colorAccent">#B39DDB</color>
     <color name="white">#FFFFFF</color>
     <color name="oblack">#1A000000</color>
