ajustes no card de compartilhamento

--- a/manager/src/main/res/layout/new_style_form.xml
+++ b/manager/src/main/res/layout/new_style_form.xml
@@ -66,8 +66,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:enabled="false"
-                android:valueFrom="0.10"
-                android:valueTo="50"
+                android:valueFrom="-100"
+                android:valueTo="100"
                 app:haloColor="@color/white"
                 app:haloRadius="@dimen/radius_small"
                 app:thumbColor="@color/white"
@@ -179,6 +179,7 @@
                 android:layout_alignParentEnd="true"
                 android:foreground="?attr/selectableItemBackground"
                 android:paddingVertical="@dimen/padding_default"
+                android:layout_margin="@dimen/margin_default"
                 android:text="Salvar"
                 android:textAlignment="center"
                 android:textColor="?android:colorBackground"
