--- a/app/src/main/res/layout/share_quote_preview.xml
+++ b/app/src/main/res/layout/share_quote_preview.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:background="?android:colorBackground"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
@@ -28,15 +28,14 @@
             android:id="@+id/shareView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorAccent"
-            android:paddingHorizontal="@dimen/padding_default"
-            android:paddingVertical="?attr/actionBarSize">
+            android:padding="@dimen/statusBarHeight"
+            android:background="@color/colorAccent">
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/shareCard"
+                android:layout_height="350dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@id/shareButton"
+                android:layout_margin="@dimen/margin_default"
                 android:stateListAnimator="@animator/list_animator"
                 app:cardBackgroundColor="?android:colorBackground"
                 app:cardCornerRadius="0dp"
@@ -119,7 +118,7 @@
                             <TextView
                                 android:id="@+id/quoteTextView"
                                 android:layout_width="match_parent"
-                                android:layout_height="400dp"
+                                android:layout_height="200dp"
                                 android:autoSizeMaxTextSize="@dimen/big_quote_size"
                                 android:autoSizeMinTextSize="@dimen/min_quote_size"
                                 android:gravity="center"
@@ -161,12 +160,13 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/shareButton"
+                android:layout_below="@id/shareCard"
                 style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:enabled="false"
                 android:padding="@dimen/padding_default"
+                android:layout_margin="@dimen/margin_default"
                 android:text="Compartilhar"
                 android:textColor="@color/white"
                 android:textStyle="bold"
