--- a/base/src/main/res/layout/motiv_toolbar.xml
+++ b/base/src/main/res/layout/motiv_toolbar.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <RelativeLayout
+        android:id="@+id/toolbarContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -34,6 +35,7 @@
                 android:text="@string/app_name"
                 android:fontFamily="@font/jost"
                 android:textAppearance="@style/ToolbarTitle"
+                tools:textColor="@color/colorAccent"
                 android:textColor="@color/white" />
         </RelativeLayout>
 
