--- a/manager/src/main/res/menu/bottom_nav_menu.xml
+++ b/manager/src/main/res/menu/bottom_nav_menu.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home"
-        android:title="@string/title_home" />
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/navigation_home"
+            android:icon="@drawable/ic_saturn_and_other_planets_primary"
+            android:title="@string/title_home" />
 
-    <item
-        android:icon="@drawable/ic_icons"
-        android:id="@+id/navigation_icons"
-        android:title="Ícones" />
+        <item
+            android:id="@+id/navigation_icons"
+            android:icon="@drawable/ic_icons"
+            android:title="Ícones" />
 
-    <item
-        android:id="@+id/navigation_covers"
-        android:icon="@drawable/ic_covers"
-        android:title="Planos de fundo" />
-    <item
-        android:id="@+id/navigation_styles"
-        android:icon="@drawable/ic_baseline_architecture_24"
-        android:title="Estilos" />
+        <item
+            android:id="@+id/navigation_covers"
+            android:icon="@drawable/ic_covers"
+            android:title="Planos de fundo" />
+        <item
+            android:id="@+id/navigation_styles"
+            android:icon="@drawable/ic_baseline_architecture_24"
+            android:title="Estilos" />
+    </group>
+
 
 </menu>
