--- a/app/src/main/res/layout/radio_page_layout.xml
+++ b/app/src/main/res/layout/radio_page_layout.xml
@@ -12,7 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Motiv"
-        android:gravity="center|start"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+        android:gravity="center"
+        android:paddingVertical="@dimen/padding_small"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
+        android:textColor="@color/colorPrimaryDark"
+        android:textStyle="bold"
         android:transitionName="@string/style_text_transtition" />
 </layout>
