--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
                 android:id="@+id/playerView"
                 layout="@layout/player_layout"
                 android:layout_width="match_parent"
-                android:layout_height="40dp" />
+                android:layout_height="?attr/actionBarSize" />
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/nav_view"
