--- a/app/src/main/res/layout/player_layout.xml
+++ b/app/src/main/res/layout/player_layout.xml
@@ -9,32 +9,30 @@
 
     <LinearLayout
         android:id="@+id/playerContainer"
-        android:foreground="?attr/selectableItemBackground"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/transparent"
-        android:stateListAnimator="@animator/list_animator"
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_small"
         tools:visibility="visible"
         android:visibility="gone">
 
-        <com.google.android.material.progressindicator.LinearProgressIndicator
+        <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/playing_animation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:indeterminate="true"
-            android:indeterminateTint="?android:colorBackground"
-            app:indeterminateAnimationType="disjoint"
-            app:indicatorDirectionLinear="startToEnd"
-            app:trackColor="@color/transparent"
-            app:trackCornerRadius="@dimen/radius_small"
-            app:trackThickness="2dp" />
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:stateListAnimator="@animator/list_animator"
+            app:lottie_colorFilter="@color/colorPrimaryDark"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/planet_spinning"
+            app:lottie_repeatMode="reverse"
+            app:lottie_scale="8" />
 
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/radiosPager"
-            android:foreground="?attr/selectableItemBackground"
-            android:stateListAnimator="@animator/list_animator"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
