--- a/app/src/main/res/layout/share_quote_preview.xml
+++ b/app/src/main/res/layout/share_quote_preview.xml
@@ -33,7 +33,7 @@
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/shareCard"
-                android:layout_height="400dp"
+                android:layout_height="350dp"
                 android:layout_width="match_parent"
                 android:layout_margin="@dimen/margin_default"
                 android:stateListAnimator="@animator/list_animator"
@@ -106,9 +106,10 @@
                             android:scaleType="centerCrop" />
 
                         <View
+                            android:alpha="0.3"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="@color/lblack" />
+                            android:background="@color/md_black" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -119,7 +120,7 @@
                             <TextView
                                 android:id="@+id/quoteTextView"
                                 android:layout_width="match_parent"
-                                android:layout_height="300dp"
+                                android:layout_height="250dp"
                                 android:autoSizeMaxTextSize="@dimen/big_quote_size"
                                 android:autoSizeMinTextSize="@dimen/min_quote_size"
                                 android:gravity="center"
