--- a/base/src/main/res/values/styles.xml
+++ b/base/src/main/res/values/styles.xml
@@ -67,12 +67,8 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
-    <style name="Full_Screen_Dialog" parent="Motiv.Theme">
-        <item name="android:windowFrame">@null</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
-        <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
+    <style name="Full_Screen_Dialog" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
     </style>
 
     <style name="ShapeAppearanceOverlay.App.BottomCornerRadius" parent="">
